# gaiaCatalog

./: .gitignore  AGENTS.md  README.md  pyproject.toml
architecture/: README.md  masterControl.py
architecture/1-input/: DELETEjsonld2lance.py  DELETEpdf2Markdown.py  README.md  doclingInputConversion.py  jsonld2lance.py  jsonld2lanceDuckDB.py  jsonld2lanceDuckDB.py.safe  jsonld2nt.py  pdf2MarkdownAndTables.py  rdfBuilder.py
architecture/2-chunking/: README.md  chonkey.py  chonkie2lance.py
architecture/3-extraction/: README.md  glinerLance.py  original_dataframe.csv
architecture/6-use/: README.md
architecture/7-Deployment/: README.md
architecture/7-deployment/: README.md
architecture/defs/: gliner2lance.py  gliner2lance.py~  jsonld2ntfile.py  jsonldFile2Lance.py  jsonldFile2Pgvector.py  lance_utils.py  pdf2markdown.py
architecture/stores/: output.nt
authoring/validation/: Merged Validation Plan for Dataset and Variable level.docx  Merged_Metadata_Ingestion_into_PostgreSQL.docx
datastore/: .gitignore
datastore/collections/: meta_all.json  meta_aphrc.json  meta_ohdsi-gaia.json  meta_ohdsi_gis.json  meta_tanzania_health_outcomes.json  meta_tt-disease-risk.json  meta_tz-health-outcomes.json
mappings/: README.md  argomappingRML.ipynb  flow.d2  geopan.py  mappingRML.ipynb  notes.md  reference1.json
notebooks/: README.md  oxigraph_graphexploring.ipynb  rdfGraphs2.graphml
shapeGraphs/: README.md  gaiaRecommendations.ttl  gaiaRequirements.ttl  googleRecommended.ttl  googleRecommendedCoverageCheck.ttl  googleRequired.ttl  requirements.md  valFramework.py
(+538 files in other folders)
