[project]
name = "gaiacatalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advertools>=0.17.1",
    "baml-py==0.86.1",
    "chonkie>=1.1.1",
    "datasets>=4.0.0",
    "docling>=2.42.2",
    "duckdb>=1.3.2",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "geopandas>=1.1.1",
    "gliner>=0.2.21",
    "gradio>=5.42.0",
    "ipysigma>=0.24.5",
    "kuzu>=0.11.1",
    "lancedb>=0.24.2",
    "morph-kgc>=2.3.1",
    "ollama>=0.5.3",
    "pandas>=2.3.1",
    "polars>=1.32.3",
    "pygraphml>=2.4.2",
    "pylance>=0.32.0",
    "pyld>=2.0.4",
    "pymupdf>=1.26.5",
    "pyoxigraph>=0.5.0",
    "qlever>=0.5.23",
    "rdflib>=7.1.4",
    "scrapy>=2.13.3",
    "sentence-transformers>=5.0.0",
    "sparqlwrapper>=2.0.0",
    "tantivy>=0.24.0",
    "tools>=1.0.6",
]
